--- a/httpd.conf
+++ b/httpd.conf
@@ -547,24 +547,44 @@ SSLRandomSeed connect builtin
 
 
 # set path to wsap24.so
-LoadModule _1cws_module /opt/1cv8/x86_64/8.3.22.1704/wsap24.so
+LoadModule _1cws_module /opt/1cv8/x86_64/8.3.23.1865/wsap24.so
 
 # 1c publication
-Alias "/base_name" "/usr/local/apache2/htdocs/base_name/"
-<Directory "/usr/local/apache2/htdocs/base_name/">
+Alias "/bp_ip" "/var/www/1c/bp_ip/"
+<Directory "/var/www/1c/bp_ip/">
     AllowOverride All
     Options None
     Require all granted
     SetHandler 1c-application
-    ManagedApplicationDescriptor "/usr/local/apache2/htdocs/base_name/default.vrd"
+    ManagedApplicationDescriptor "/var/www/1c/bp_ip/default.vrd"
 </Directory>
 
-# 1c publication (second infobase)
-# Alias "/AnotherBuhBase" "/usr/local/apache2/htdocs/AnotherBuhBase/"
-# <Directory "/usr/local/apache2/htdocs/AnotherBuhBase/">
-#    AllowOverride All
-#    Options None
-#    Require all granted
-#    SetHandler 1c-application
-#    ManagedApplicationDescriptor "/usr/local/apache2/htdocs/AnotherBuhBase/default.vrd"
-# </Directory>
+# 1c publication
+Alias "/bp_ooo" "/var/www/1c/bp_ooo/"
+<Directory "/var/www/1c/bp_ooo/">
+    AllowOverride All
+    Options None
+    Require all granted
+    SetHandler 1c-application
+    ManagedApplicationDescriptor "/var/www/1c/bp_ooo/default.vrd"
+</Directory>
+
+# 1c publication
+Alias "/zup_ip" "/var/www/1c/zup_ip/"
+<Directory "/var/www/1c/zup_ip/">
+    AllowOverride All
+    Options None
+    Require all granted
+    SetHandler 1c-application
+    ManagedApplicationDescriptor "/var/www/1c/zup_ip/default.vrd"
+</Directory>
+
+# 1c publication
+Alias "/zup_ooo" "/var/www/1c/zup_ooo/"
+<Directory "/var/www/1c/zup_ooo/">
+    AllowOverride All
+    Options None
+    Require all granted
+    SetHandler 1c-application
+    ManagedApplicationDescriptor "/var/www/1c/zup_ooo/default.vrd"
+</Directory>
